--- a/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
@@ -19,6 +19,7 @@
 
   <% @meta&.each do |meta| %>
     <td>
+      <%= prop_or_dim_label(meta) %>
       <%= I18n.exists?("dimensions.#{meta}") ? t("dimensions.#{meta}").titleize : meta.titleize %>
     </td>
   <% end %>
