Refactor highlight controller

--- a/app/views/data_explorer/_highlight_chooser.html.erb
+++ b/app/views/data_explorer/_highlight_chooser.html.erb
@@ -2,25 +2,37 @@
   <legend>Highlight Options</legend>
 
   <label for="hi-scale">Scale</label>
-  <select id="hi-scale" data-data-explorer--results-table-highlight-target="scale" data-action="data-explorer--results-table-highlight#highlight">
+  <select
+    id="hi-scale"
+    data-data-explorer--results-table-highlight-target="scale"
+    data-action="data-explorer--results-table-highlight#highlight">
+
     <option value="log">Log</option>
     <option value="linear">Linear</option>
   </select>
 
   <label for="hi-palette">Palette</label>
-  <select id="hi-palette" data-data-explorer--results-table-highlight-target="palette" data-action="data-explorer--results-table-highlight#highlight">
+  <select
+    id="hi-palette"
+    data-data-explorer--results-table-highlight-target="palette"
+    data-action="data-explorer--results-table-highlight#highlight">
+
     <option value="rainbow">Rainbow</option>
     <option value="monochrome">Monochrome</option>
   </select>
 
-  <label for="hi-spectrums">Spectrums</label>
-  <select id="hi-spectrums" data-data-explorer--results-table-highlight-target="spectrums" data-action="data-explorer--results-table-highlight#highlight">
-    <option value="all_values">All values</option>
-    <option value="per_metric">Per metric</option>
-    <option value="per_metric_group_1">Amongst group 1</option>
-    <option value="per_metric_group_2">Amongst group 2</option>
-    <option value="per_metric_interval">Amongst interval</option>
-    <option value="per_metric_group_1_delta">Group 1 over time</option>
-    <option value="per_metric_group_1_group_2_delta">Group 1+2 over time</option>
+  <label for="hi-divisions">Divisions</label>
+  <select
+    id="hi-divisions"
+    data-data-explorer--results-table-highlight-target="divisions"
+    data-action="data-explorer--results-table-highlight#highlight">
+
+    <option value="">All values</option>
+    <option value="data-highlight-metric">Per metric</option>
+    <option value="data-highlight-metric,data-highlight-group-1">Amongst group 1</option>
+    <option value="data-highlight-metric,data-highlight-group-2">Amongst group 2</option>
+    <option value="data-highlight-metric,data-highlight-interval">Amongst interval</option>
+    <option value="delta,data-highlight-metric,data-highlight-group-1">Group 1 over time</option>
+    <option value="delta,data-highlight-metric,data-highlight-group-1,data-highlight-group-2">Group 1+2 over time</option>
   </select>
 </fieldset>
