--- a/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
@@ -1,49 +1,57 @@
-<tr class="totals">
+<tr>
   <% if @tbl_show_group_1_headers %>
     <th scope="row">TOTAL</th>
   <% end %>
 
   <% if @tbl_show_group_1_totals %>
     <% @composition.metrics.each do |metric| %>
-      <%# Don't display an overall total for this metric if either group is not summable %>
-      <% if @composition.groups[0]&.summable?(metric) && @composition.groups[1]&.summable?(metric) %>
-        <% total = @composition.results.get_total(metric) %>
-        <td><%= number_with_delimiter(total) %></td>
-      <% else %>
-        <% title = "When grouping by #{@composition.groups[0]&.dimension} and #{@composition.groups[1]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting." %>
+      <%
+        # Don't display an overall total for this metric if either group is not summable
+        if @composition.groups[0]&.summable?(metric) && @composition.groups[1]&.summable?(metric)
+          total = @composition.results.get_total(metric)
+          text = number_with_delimiter(total)
 
-        <td title="<%= title %>">n/a</td>
-      <% end %>
+          title = "tktk"
+        else
+          text = "n/a"
+          title = "When grouping by #{@composition.groups[0]&.dimension} and #{@composition.groups[1]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting."
+        end
+      %>
+
+      <td class="totals" title="<%= title %>"><%= text %></td>
     <% end %>
   <% end %>
 
   <% @meta&.each do |meta| %>
-    <td>
-      <%= prop_or_dim_label(meta) %>
-    </td>
+    <td></td>
   <% end %>
 
   <% @expand_group_2_member_descriptors.each do |group_2_member_descriptor| %>
     <% @composition.metrics.each do |metric| %>
-      <%# Don't display a total for this group 2 member if group 1 is not summable for this metric %>
-      <% if !@composition.groups[0] || @composition.groups[0]&.summable?(metric) %>
-        <% total = @composition.results.get_total(metric, @composition.groups[1], group_2_member_descriptor) %>
-        <% min = @composition.results.get_min(metric, @composition.groups[1], group_2_member_descriptor) %>
-        <% max = @composition.results.get_max(metric, @composition.groups[1], group_2_member_descriptor) %>
-        <% range = (max||0) - (min||0) %>
-        <% mean = @composition.results.get_arith_mean(metric, false, group_2_member_descriptor) || 0 %>
+      <%
+        # Don't display a total for this group 2 member if group 1 is not summable for this metric
+        if !@composition.groups[0] || @composition.groups[0]&.summable?(metric)
+          total = @composition.results.get_total(metric, @composition.groups[1], group_2_member_descriptor)
+          min = @composition.results.get_min(metric, @composition.groups[1], group_2_member_descriptor)
+          max = @composition.results.get_max(metric, @composition.groups[1], group_2_member_descriptor)
+          range = (max||0) - (min||0)
+          mean = @composition.results.get_arith_mean(metric, false, group_2_member_descriptor) || 0
 
-        <% title = "Mean: #{number_with_delimiter(mean)}\nMin: #{number_with_delimiter(min)}\nMax: #{number_with_delimiter(max)}\nRange: #{number_with_delimiter(range)}" %>
+          text = number_with_delimiter(total)
 
-        <td
-          data-highlight-metric="<%= metric.metric %>"
-          data-highlight-group-2="<%= group_2_member_descriptor || "__nil__" %>"
-          title="<%= title %>"><%= number_with_delimiter total %> <button data-action="data-explorer--results-table-sort#sort">O</button></td>
-      <% else %>
-        <% title = "When grouping by #{@composition.groups[0]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting." %>
+          title = [
+            "Mean: #{number_with_delimiter(mean)}","
+            Min: #{number_with_delimiter(min)}","
+            Max: #{number_with_delimiter(max)}","
+            Range: #{number_with_delimiter(range)}"
+          ].join("\n")
+        else
+          title = "When grouping by #{@composition.groups[0]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting."
+          text = "n/a"
+        end
+      %>
 
-        <td title="<%= title %>">n/a</td>
-      <% end %>
+      <td class="totals" title="<%= title %>"><%= text %></td>
     <% end %>
   <% end %>
 </tr>
