--- a/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
@@ -21,7 +21,7 @@
             "Min: #{number_with_delimiter(min)}",
             "Max: #{number_with_delimiter(max)}",
             "Range: #{number_with_delimiter(range)}"
-          ]
+          ].join("\n")
 
           text = number_with_delimiter total
         else
